# HOLON-cloudclient

./: .gitignore  .pre-commit-config.yaml  README.md  __make_a_set.py  assets.xlsx  config.xlsx  mvp.py  pyproject.toml  requirements.txt  setup.cfg  todo.md  update_classdiagrams.py  update_doc_assets.py  util.py
cloudclient/: __init__.py
cloudclient/config/: experiments.webdev.yml
cloudclient/datamodel/: __demo.py  __init__.py  actors.py  config.py  contracts.py  gridconnections.py  gridnodes.py  toplevel.py  util.py
cloudclient/datamodel/assets/: __init__.py  consumption.py  conversion.py  energy.py  production.py  storage.py
cloudclient/datamodel/assets/defaults/: production_defaults.py
cloudclient/datamodel/defaults/: __init__.py  consumption_defaults.py  conversion_defaults.py  production_defaults.py  storage_defaults.py
cloudclient/dataobjects/assets/: production.py
cloudclient/experiments/: __init__.py
cloudclient/experiments/anylogic_experiment/: __init__.py  outcomes.py
cloudclient/experiments/dataobjects/: __demo.py  actors.py
cloudclient/experiments/dataobjects/assets/: conversion.py  storage.py
cloudclient/experiments/dataobjects/gridconnections/: __init__.py
cloudclient/input/300_gridConnections/: db_backboneConfig_300.xlsx
cloudclient/output/MVPCase1BedrijventerreinBasicExplicit/: APIOutputAgentData_MVPCase1BedrijventerreinBasicExplicit.xlsx  APIOutputRunData_MVPCase1BedrijventerreinBasicExplicit.xlsx
cloudclient/scripts/: initiate.py  run_scenario.py
doc/assets/: example.json  example_actors.json  example_assets.xlsx  example_config.xlsx  example_gridconnections.json  example_gridnodes.json  example_policies.json  example_total.json
doc/html/: actors_classes.html  consumption_classes.html  contracts_classes.html  conversion_classes.html  gridconnections_classes.html  gridnode_classes.html  gridnodes_classes.html  production_classes.html  storage_classes.html
htmls/: gridconnection_classes.html  production_classes.html
run_cloud_experiments/: webdev_cloud_poc_config_energyAssets.txt
run_cloud_experiments/config/: config.yml  experiments.example.yml
run_cloud_experiments/experiments/: __init__.py  experiment.py
run_cloud_experiments/experiments/anylogic_experiment/: __init__.py
run_cloud_experiments/experiments/client/dataobjects/: __init__.py  consumption_assets.py  consumption_classes.html  (+6 more)
run_cloud_experiments/input/MVPCase1BedrijventerreinBasicExplicit/: db_backboneConfig_MVPCase1BedrijventerreinBasic.xlsx
run_cloud_experiments/scripts/: run_scenario.py  serve_experiment.py
(+5 files in other folders)
