# This file is used to configure your project.
# Read more about the various options under:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html

[metadata]
name = cloudclient
description = The AnyLogic cloudclient used to interface the HOLON model to the web
author = Seth van Wieringen
author_email = seth.van.wieringen@witteveenbos.com
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://zenmo.github.io/HOLON-cloudclient/
# Add here related links, for example:
project_urls =
    Documentation = https://zenmo.github.io/HOLON-cloudclient/

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python


[options]
zip_safe = True
packages = find_namespace:
include_package_data = True
package_dir =
    =cloudclient

# Require a min/specific Python version (comma-separated conditions)
# python_requires = >=3.8

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    importlib-metadata; python_version<"3.8"


[options.packages.find]
where = cloudclient
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install demo-project[PDF]` like:
# PDF = ReportLab; RXP

# Add here test requirements (semicolon/line-separated)
testing =
    pytest

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 1.0
package = cloudclient
extensions =
    pre_commit
